WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170510
[MSE] Seeks to currentTime=0 will fail if currentTime is already 0.
https://bugs.webkit.org/show_bug.cgi?id=170510
Summary
[MSE] Seeks to currentTime=0 will fail if currentTime is already 0.
Jer Noble
Reported
2017-04-05 10:15:52 PDT
[MSE] Seeks to currentTime=0 will fail if currentTime is already 0.
Attachments
Patch
(6.13 KB, patch)
2017-04-05 10:18 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-04-05 10:18:13 PDT
<
rdar://problem/30988403
>
Jer Noble
Comment 2
2017-04-05 10:18:51 PDT
Created
attachment 306295
[details]
Patch
WebKit Commit Bot
Comment 3
2017-04-05 12:09:32 PDT
Comment on
attachment 306295
[details]
Patch Clearing flags on attachment: 306295 Committed
r214959
: <
http://trac.webkit.org/changeset/214959
>
WebKit Commit Bot
Comment 4
2017-04-05 12:09:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug