[MSE] Seeks to currentTime=0 will fail if currentTime is already 0. https://bugs.webkit.org/show_bug.cgi?id=170510 Source/WebCore:

<rdar://problem/30988403>

Reviewed by Eric Carlson.

Test: media/media-source/media-source-unnecessary-seek-seeked.html

The AVSampleBufferRenderSynchronizer won't fire a time jumped notification if no seek is actully
necessary. So short circuit the seek logic if the seek time is identical to the current synchronizer
time.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::seekInternal):

LayoutTests:

Reviewed by Eric Carlson.

* media/media-source/media-source-unnecessary-seek-seeked-expected.txt: Added.
* media/media-source/media-source-unnecessary-seek-seeked.html: Added.


Canonical link: https://commits.webkit.org/187440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214959 268f45cc-cd09-0410-ab3c-d52691b4dbfc